# Hart_Quantitative_Research

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.additions.toml  pyproject.toml
backend/: Dockerfile  api.py  api_prices_tiingo.py  backtest_runtime.py  job_runner.py  party_time_runtime.py
backend/core/: auth_refresh.py  check_actual_trading_results.py  config.py  core_helpers.py  daily_buy_suggester.py  edgar_fundamentals.py  holdings_analysis.py  horizon_buy_suggesters.py  passwords.py  refresh_buy_suggester_cache.py  refresh_market_indices_cache.py  refresh_trades_cache.py  suggester_cancel.py
backend/db/: __init__.py  ingest.py  models.py  repository.py  session.py
backend/scripts/: check_tiingo_stock_list.py
files/daily_suggestions/: feats_full_ex.csv  long_term_suggestions_20251222.csv  long_term_suggestions_20251223.csv  long_term_suggestions_20251226.csv  long_term_suggestions_20260112.csv  long_term_suggestions_20260113.csv  long_term_suggestions_20260114.csv  long_term_suggestions_20260115.csv  long_term_suggestions_20260116.csv  long_term_suggestions_20260119.csv  long_term_suggestions_20260120.csv  long_term_suggestions_20260122.csv  long_term_suggestions_20260123.csv  long_term_suggestions_20260126.csv  long_term_suggestions_20260127.csv  long_term_suggestions_20260128.csv  long_term_suggestions_20260129.csv  long_term_suggestions_20260130.csv  long_term_suggestions_20260202.csv  long_term_suggestions_20260203.csv  long_term_suggestions_20260204.csv  short_term_suggestions_20251223.csv  short_term_suggestions_20251224.csv  short_term_suggestions_20251226.csv  short_term_suggestions_20260112.csv  (+52 more)
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  package-lock.json  package.json
tests/: TODO_quant_research_api_test.py
(+233 files in other folders)
