[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hart-quantitative-research"
version = "2025.8.25"                # PEP 440-compliant
description = "A quantitative research platform"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Nicholas Hart" }]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
]
dependencies = [
  "pandas>=2.2",
  "lxml",
  "numpy",
  "scipy",
  "requests>=2.32",
  "openai>=1.51.0",
  "loguru>=0.7",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "matplotlib",
  "mplfinance",
  "google-api-python-client",
  "google-auth-httplib2",
  "google-auth-oauthlib",
  "vaderSentiment",
  "ta-lib",
  "sqlalchemy",
  "psycopg[binary]>=3.2",
]

[project.scripts]
hart-quantitative-research = "backend.core.daily_buy_suggester:main"

[project.optional-dependencies]
ml = ["tensorflow", "torch", "scikit-learn", "stable-baselines3[extra]"]
stats = ["pymc", "seaborn"]
dev = ["pytest", "black", "ruff", "mypy"]
politician-trades-scrapers = ["selenium>=4.25", "pdfplumber>=0.11"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.build.targets.sdist]
include = ["backend/**", "README.md", "LICENSE"]

[tool.ruff]
line-length = 200
target-version = "py311"
exclude = ["frontend","data","logs",".venv","venv",".mypy_cache",".ruff_cache",".pytest_cache"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","C4"]
ignore = ["ANN","D","N","PLR","S"]

[tool.black]
line-length = 100
target-version = ["py311"]
